--- a/e-testing-front/src/styles.css
+++ b/e-testing-front/src/styles.css
@@ -1,1 +1,50 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    background: #2e3441;
+    background-image: -webkit-radial-gradient(top, circle cover, #4e7a89, #2e3441 80%);
+    background-image: -moz-radial-gradient(top, circle cover, #4e7a89, #2e3441 80%);
+    background-image: -o-radial-gradient(top, circle cover, #4e7a89, #2e3441 80%);
+    background-image: radial-gradient(top, circle cover, #4e7a89, #2e3441 80%);
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+
+  /* Font Definition */
+/* Champagne & Limousines */
+
+@font-face {
+	font-family: "Champagne";
+	src: url("/assets/fonts/champagne.ttf");
+}
+
+@font-face {
+	font-family: "Champagne";
+	font-style: italic;
+	src: url("/assets/fonts/champagne-italic.ttf");
+}
+
+@font-face {
+	font-family: "Champagne";
+	font-weight: bold;
+	src: url("/assets/fonts/champagne-bold.ttf");
+}
+
+@font-face {
+	font-family: "Champagne";
+    font-weight: bold;
+    font-style: italic;
+	src: url("/assets/fonts/champagne-bold-italic.ttf");
+}
+
+/* Journey to Thailand */
+
+@font-face {
+	font-family: "Journey";
+	src: url("/assets/fonts/journey.ttf");
+}
+
+@font-face {
+    font-family: "Journey";
+    font-weight: lighter;
+	src: url("/assets/fonts/journey-light.ttf");
+}
