--- a/e-testing-front/src/app/login/login.component.html
+++ b/e-testing-front/src/app/login/login.component.html
@@ -4,22 +4,63 @@
       <i class="material-icons medium">school</i>
       <h4>e-testing</h4>
     </div>
-    
+  <!--
     <form>
       <div class="inputrow" name="form" (ngSubmit)="login()" novalidate>
-        <input type="text" id="name" placeholder="Adresse mail"/>
-        <label for="name">
+        <input id="email" type="email" name="email" placeholder="Adresse mail"/>
+        <label for="email">
           <i class="material-icons">person</i>
         </label>
       </div>
       <div class="inputrow">
-        <input type="password" id="pass" placeholder="Mot de passe"/>
-        <label for="pass">
+        <input id="password" type="password" name="password" placeholder="Mot de passe"/>
+        <label for="password">
             <i class="material-icons">lock</i>
         </label>
       </div>
       
-      <input class="waves-effect waves-light btn teal darken-1 right" type="submit" value="Login"/>
+      <input class="waves-effect waves-light btn teal darken-1 right" type="submit" name="action">Connexion
     </form>
+  -->
+    <form class="col s12" name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
+      <div class="row">
+          <div class="input-field col s12">
+              <input id="email" type="email" name="email" placeholder="Saisissez votre adresse mail" class="validate" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" [(ngModel)]="model.email" #email="ngModel" [ngClass]="{ 'invalid': f.submitted && !email.valid }">
+              <label for="email" class="active" data-error="L'adresse email saisie est incorrecte">Email</label>
+          </div>
+      </div>
+      <div class="row">
+          <div class="input-field col s12">
+              <input id="password" type="password" name="password" placeholder="Saisissez votre mot de passe" class="validate" required [(ngModel)]="model.password" #password="ngModel" [ngClass]="{ 'invalid': f.submitted && !password.valid }">
+              <label for="password" class="active" data-error="Aucun mot de passe n'a été saisie">Mot de Passe</label>
+          </div>
+      </div>
+      <div class="row">
+          <div class="row">
+              <div *ngIf="errorMsg" class="red-text">{{errorMsg}}</div>
+              <div *ngIf="loader; else elseBlock" class="preloader-wrapper small active right">
+                  <div class="spinner-layer spinner-green-only">
+                      <div class="circle-clipper left">
+                          <div class="circle"></div>
+                      </div>
+                      <div class="gap-patch">
+                          <div class="circle"></div>
+                      </div>
+                      <div class="circle-clipper right">
+                          <div class="circle"></div>
+                      </div>
+                  </div>
+              </div>
+              <ng-template #elseBlock>
+                  <div class="input-field col s12 center">
+                      <button class="btn waves-effect waves-light pink accent-1" 
+                      type="submit" name="action">Connexion
+            <i class="mdi-content-send right"></i>
+          </button>
+                  </div>
+              </ng-template>
+          </div>
+      </div>
+  </form>
   </div>
 </body>
