--- a/e-testing-front/src/app/etesting/qcm/qcm.component.html
+++ b/e-testing-front/src/app/etesting/qcm/qcm.component.html
@@ -59,4 +59,10 @@
           </span>
         </div>
       </div>
+
+      <label>Click me: <input type="checkbox" ng-model="checked" ng-init="checked=true" /></label><br/>
+Show when checked:
+<span ng-if="checked" class="animate-if">
+  This is removed when the checkbox is unchecked.
+</span>
   </div>
