--- a/e-testing-front/src/app/etesting/navbar/navbar.component.html
+++ b/e-testing-front/src/app/etesting/navbar/navbar.component.html
@@ -1,10 +1,9 @@
-<nav>
-  <div class="nav-wrapper">
+<nav class="row">
+  <div class="col l8 offset-l2 m8 offset-m2 s12 nav-wrapper">
     <a href="#" class="brand-logo">e-testing</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a href="sass.html">Sass</a></li>
-      <li><a href="badges.html">Components</a></li>
-      <li><a href="collapsible.html">JavaScript</a></li>
+      <li><a href="badges.html">Profil</a></li>
+      <li><a href="collapsible.html">Déconnexion</a></li>
     </ul>
   </div>
 </nav>
