--- a/e-testing-front/src/app/etesting/qcm/qcm.component.html
+++ b/e-testing-front/src/app/etesting/qcm/qcm.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col l8 offset-l2 m8 offset-m2 s12">
-        <div class="card-panel red lighten-4 title">
+        <div class="card-panel grey lighten-2 title">
           <span>
               <h4 class="center">{{qcm.nom}}</h4>
           </span>
