--- a/e-testing-front/src/app/etesting/admin/fileupload/fileupload.component.html
+++ b/e-testing-front/src/app/etesting/admin/fileupload/fileupload.component.html
@@ -2,7 +2,7 @@
     <div class="row">
 
         <div class="col m12 s12">
-            <h3>Sélectionner un média</h3>
+            <h3>Sélectionner un questionnaire au format XML</h3>
             <div ng2FileDrop [ngClass]="{'nv-file-over': hasBaseDropZoneOver}" (fileOver)="fileOverBase($event)" [uploader]="uploader" class="well my-drop-zone">
                 <p class="center">Faites glisser votre fichier ici</p>
             </div>
