--- a/e-testing-front/src/app/etesting/list-qcm/list-qcm.component.html
+++ b/e-testing-front/src/app/etesting/list-qcm/list-qcm.component.html
@@ -1,29 +1,16 @@
-<div class="row">
-  <div class="col l8 offset-l2 m8 offset-m2 s12">
+<div class="row ">
+  <div class="col l12 m12 s12">
       <div class="card-panel grey lighten-2 title">
         <span>
             <h4 class="center">Vos QCMs</h4>
         </span>
       </div>
     </div>
-    <div class="col l4 offset-l2 m4 offset-m2 s12">
+    <div class="col l6 m6 s12" *ngFor="let qcm of qcms">
       <div class="card grey lighten-4">
         <div class="card-content">
-          <span class="card-title">Card Title</span>
-          <p>
-            
-          </p>
+          <span class="card-title center">{{qcm.nom}}</span>
         </div>
       </div>
     </div>
-  <!--
-  <div class="col l8 offset-l2 m8 offset-m2 s12">
-    <div class="card-panel grey lighten-4" *ngFor="let questionReponse of qcm.listeQuestionsReponses">
-      <span>
-            <p class="col l11 m11 s11 question">{{ questionReponse.libelleQuestion }} : </p>
-            <p class="col l1 m1 s1 points">/{{ questionReponse.totalPts }} pts </p>
-      </span>
-    </div>
-  </div>
--->
 </div>
