Logo redirect home #20

--- a/e-testing-front/src/app/etesting/navbar/navbar.component.html
+++ b/e-testing-front/src/app/etesting/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 <nav class="row green lighten-2">
   <div class="col l8 offset-l2 m8 offset-m2 s12 nav-wrapper">
-    <a href="#" class="brand-logo">e-testing</a>
+    <a href="/etesting/home" class="brand-logo">e-testing</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a href="badges.html">Profil</a></li>
-      <li><a href="collapsible.html">Déconnexion</a></li>
+      <li><a href="#">Admin</a></li>
+      <li><a href="#">Déconnexion</a></li>
     </ul>
   </div>
 </nav>
