Reset Qcm + add loader after qcm submit

--- a/e-testing-front/src/app/etesting/correct-qcm/correct-qcm.component.html
+++ b/e-testing-front/src/app/etesting/correct-qcm/correct-qcm.component.html
@@ -29,6 +29,6 @@
     </div>
   </div>
   <div class="col s12 center">
-      <a [href]="['/etesting/home']" class="waves-effect waves-light btn">Quitter QCM</a>
+      <a class="waves-effect waves-light btn" (click)="resetQcm()">Quitter QCM</a>
   </div>
 </div>
