--- a/e-testing-front/src/app/etesting/correct-qcm/correct-qcm.component.html
+++ b/e-testing-front/src/app/etesting/correct-qcm/correct-qcm.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="row">
   <div class="col l8 offset-l2 m8 offset-m2 s12">
     <div class="card-panel grey lighten-2 title">
