--- a/e-testing-front/src/app/etesting/admin/fileupload/fileupload.component.html
+++ b/e-testing-front/src/app/etesting/admin/fileupload/fileupload.component.html
@@ -7,16 +7,16 @@
                 </span>
             </div>
         </div>
-        <div class="col l10 m10 s10">
+        <div class="col l12 m12 s12">
             <div class="card-panel grey lighten-4 drag-and-drop">
                 <div ng2FileDrop [ngClass]="{'nv-file-over': hasBaseDropZoneOver}" (fileOver)="fileOverBase($event)" [uploader]="uploader" class="well my-drop-zone">
                     <p class="center">Faites glisser votre fichier ici</p>
                 </div>
             </div>
         </div>
-        <div class="col l2 m2 s2">
+        <div class="col l12 m12 s12">
             <div class="file-field input-field import">
-                <div class="waves-effect waves-light btn">
+                <div class="waves-effect waves-light btn col l12 m12 s12">
                     <span>Importer <i class="material-icons">cloud_upload</i></span>
                     <input id="inputFile" name="xml" class="btn" type="file" ng2FileSelect [uploader]="uploader" />
                 </div>
