--- a/e-testing-front/src/app/etesting/navbar/navbar.component.html
+++ b/e-testing-front/src/app/etesting/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <div class="col l8 offset-l2 m8 offset-m2 s12 nav-wrapper">
     <a href="/etesting/home" class="brand-logo">e-testing</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li *ngIf="isAdmin"><a href="/etesting/admin">Admin</a></li>
+      <li *ngIf="isAdmin"><a href="/etesting/admin">Importer Qcm</a></li>
       <li><a href="/login" (click)="logout()">Déconnexion</a></li>
     </ul>
   </div>
