--- a/e-testing-front/src/app/etesting/list-qcm/list-qcm.component.html
+++ b/e-testing-front/src/app/etesting/list-qcm/list-qcm.component.html
@@ -15,7 +15,7 @@
     </button>
     <div *ngIf="isAdmin">
       <i class="material-icons">edit</i>
-      <i class="material-icons" (click)="exportQcm(qcm.id)">file_upload</i>
+      <i class="upload material-icons" (click)="exportQcm(qcm.id)">file_upload</i>
     </div>
   </div>
 </div>
