--- a/e-testing-front/src/app/etesting/admin/fileupload/fileupload.component.html
+++ b/e-testing-front/src/app/etesting/admin/fileupload/fileupload.component.html
@@ -16,8 +16,8 @@
         </div>
         <div class="col l12 m12 s12">
             <div class="file-field input-field import">
-                <div class="waves-effect waves-light btn col l12 m12 s12">
-                    <span>Importer <i class="material-icons">cloud_upload</i></span>
+                <div class="btn col l12 m12 s12 waves-effect waves-light light-blue darken-1">
+                    <span>Importer Manuellement <i class="material-icons">cloud_upload</i></span>
                     <input id="inputFile" name="xml" class="btn" type="file" ng2FileSelect [uploader]="uploader" />
                 </div>
             </div>
