--- a/e-testing-front/src/app/etesting/navbar/navbar.component.html
+++ b/e-testing-front/src/app/etesting/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="row green lighten-2">
+<nav class="row light-blue darken-2">
   <div class="col l8 offset-l2 m8 offset-m2 s12 nav-wrapper">
     <a href="/etesting/home" class="brand-logo">e-testing</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
