--- a/e-testing-front/src/app/etesting/admin/edit-qcm/edit-qcm.component.html
+++ b/e-testing-front/src/app/etesting/admin/edit-qcm/edit-qcm.component.html
@@ -6,7 +6,7 @@
         <span>
           <div>
             <h5>
-              <b>Question {{i+1}}</b>
+              <b>Question n°{{i+1}}</b>
               <i *ngIf="qcmUploaded.listeQuestionsReponses.length > 1" class="material-icons right delete" (click)=deleteQuestionReponse(questionReponse.id)>clear</i>
               <i class="material-icons right add" (click)=addQuestionReponse()>add</i>
             </h5>
@@ -48,7 +48,7 @@
       </div>
     </div>
     <div class="input-field col s12 center">
-      <button class="btn waves-effect waves-light pink accent-1" type="submit" name="action">Enregistrer QCM
+      <button class="btn col l12 m12 s12 waves-effect waves-light light-blue darken-1" type="submit" name="action">Enregistrer QCM
         <i class="mdi-content-send right"></i>
       </button>
     </div>
