#24 Edit qcm + refactoring

--- a/e-testing-front/src/app/etesting/admin/admin.component.html
+++ b/e-testing-front/src/app/etesting/admin/admin.component.html
@@ -1,3 +1,5 @@
 <app-navbar></app-navbar>
-<app-fileupload></app-fileupload>
-<app-edit-qcm></app-edit-qcm>
+<div class="container">
+  <app-fileupload></app-fileupload>
+  <app-edit-qcm></app-edit-qcm>
+</div>
