--- a/e-testing-front/src/app/etesting/admin/fileupload/fileupload.component.html
+++ b/e-testing-front/src/app/etesting/admin/fileupload/fileupload.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div *ngIf="!editMode">
     <div class="row">
         <div class="col l12 m12 s12">
             <div class="card-panel grey lighten-2 title">
