--- a/e-testing-front/src/app/login/login.component.html
+++ b/e-testing-front/src/app/login/login.component.html
@@ -41,7 +41,7 @@
                 </div>
                 <ng-template #elseBlock>
                   <div class="input-field col s12 center">
-                    <button class="btn waves-effect waves-light pink accent-1" type="submit" name="action">Connexion
+                    <button class="btn waves-effect waves-light light-blue darken-2" type="submit" name="action">Connexion
                       <i class="mdi-content-send right"></i>
                     </button>
                   </div>
