--- a/e-testing-front/src/app/etesting/qcm/qcm.component.html
+++ b/e-testing-front/src/app/etesting/qcm/qcm.component.html
@@ -28,7 +28,7 @@
     </div>
     <ng-template #elseBlock>
       <div class="input-field col s12 center">
-        <button class="btn waves-effect waves-light pink accent-1" type="submit" name="action">Terminer QCM
+        <button class="btn col l8 offset-l2 m8 offset-m2 s12 waves-effect waves-light light-blue darken-1" type="submit" name="action">Terminer QCM
           <i class="mdi-content-send right"></i>
         </button>
       </div>
