--- a/e-testing-front/src/app/etesting/list-qcm/list-qcm.component.css
+++ b/e-testing-front/src/app/etesting/list-qcm/list-qcm.component.css
@@ -15,12 +15,16 @@ button.full {
     width:100%;
 }
 
-.upload:hover{
-    color: blue;
-    cursor: pointer;
+div.edit {
+    padding: 1.5% 0% 2% 1%;
 }
 
-.edit:hover{
-    color: green;
-    cursor: pointer;
+button.small{
+    width: 100%;
+    padding: 0;
+    margin: 0% 0% 20% 0%;
+}
+
+button.full{
+    border: 0px;
 }
