Enhance Correct page #21

--- a/e-testing-front/src/app/etesting/correct-qcm/correct-qcm.component.html
+++ b/e-testing-front/src/app/etesting/correct-qcm/correct-qcm.component.html
@@ -29,7 +29,7 @@
       </span>
     </div>
   </div>
-  <div class="col s12 center">
-      <a class="waves-effect waves-light btn" (click)="resetQcm()">Quitter QCM</a>
+  <div class="col l12 m12 s12 center">
+      <a class="btn waves-effect waves-light light-blue darken-1" (click)="resetQcm()">Quitter QCM</a>
   </div>
 </div>
