--- a/e-testing-front/src/app/etesting/correct-qcm/correct-qcm.component.css
+++ b/e-testing-front/src/app/etesting/correct-qcm/correct-qcm.component.css
@@ -1,3 +1,16 @@
+h1, h2, h3, h4, h5, h6 {
+    margin: auto;
+}
+
+div.row {
+    margin: 0 0% 5% 0%;
+}
+
+div.card-panel {
+    padding: 1% 2% 1% 2%;
+    margin: 1% 0 1% 0;
+}
+
 [type="checkbox"].bonneReponse.filled-in:disabled + label:after{
     background-color: #43a047;
     border-color: black
