Fix resetQCM() error #25

--- a/e-testing-front/src/app/etesting/correct-qcm/correct-qcm.component.html
+++ b/e-testing-front/src/app/etesting/correct-qcm/correct-qcm.component.html
@@ -30,6 +30,6 @@
     </div>
   </div>
   <div class="col l12 m12 s12 center">
-      <a href="/etesting/home" class="btn waves-effect waves-light light-blue darken-1" (click)="resetQcm()">Quitter QCM</a>
+      <a href="/etesting/home" class="btn waves-effect waves-light light-blue darken-1">Quitter QCM</a>
   </div>
 </div>
