Add Logo + Change Font #25

--- a/e-testing-front/src/app/etesting/navbar/navbar.component.html
+++ b/e-testing-front/src/app/etesting/navbar/navbar.component.html
@@ -1,6 +1,9 @@
 <nav class="row light-blue darken-2">
   <div class="col l8 offset-l2 m8 offset-m2 s12 nav-wrapper">
-    <a href="/etesting/home" class="brand-logo">e-testing</a>
+      <img src="/assets/img/logo.png" alt="" class="responsive-img small">
+    <a href="/etesting/home" class="brand-logo">
+      E-Testing
+    </a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li *ngIf="isAdmin"><a href="/etesting/importQcm">Importer Qcm</a></li>
       <li><a href="/login" (click)="logout()">Déconnexion</a></li>
