--- a/e-testing-front/src/app/login/login.component.css
+++ b/e-testing-front/src/app/login/login.component.css
@@ -29,7 +29,8 @@ img{
 
 .title
 {
-    font-family: 'Journey';
+    font-family: "Champagne";
+    font-weight: bold;
     font-size: 40px;
     text-align: center;
     margin: 5px 0 5px;
