--- a/e-testing-front/src/app/login/login.component.html
+++ b/e-testing-front/src/app/login/login.component.html
@@ -1,6 +1,7 @@
 <div class="container-fluid">
   <div class="logo">
-    <h1 class="title">e-testing</h1>
+     
+    <h1 class="title white-text"><img src="/assets/img/logo.png" alt="" class="responsive-img small">E-Testing</h1>
   </div>
   <div class="row">
     <div class="col s12 m12 l4 offset-l4">
